[package]
name = "ownership-and-functions"
version = "0.1.0"
authors = ["Sammy <lixiangmin01@baidu.com>"]
edition = "2018"
description = "Listing 4-3: Functions with ownership and scope annotated"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
