[package]
name = "_07"
version = "0.1.0"
authors = ["Sammy <lixiangmin01@baidu.com>"]
edition = "2018"
description = "Listing 4-7: The first_word function that returns a byte index value into the String parameter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
